Добавлены ручки ListUser(id,full_name,rating), также CreateUser
